Minor gap fix for card numbers.

--- a/src/scss/_style_card.scss
+++ b/src/scss/_style_card.scss
@@ -115,7 +115,7 @@
     padding-left: calc(var(--card-size) * 0.06);
     display: flex;
     flex-direction: column;
-    gap: calc(var(--card-size) * 0.06);
+    gap: calc(var(--card-size) * 0.08);
     justify-content: start;
     align-items: center;
     font-size: calc(var(--card-size) / 2.5);
